--- a/localization/en.json
+++ b/localization/en.json
@@ -1498,7 +1498,7 @@
   "cart.availablePkgs": "Available Packages:",
   "cart.availableQuantity": "Available Quantity:",
   "cart.pricingLevel": "Pricing Level:",
-  "cart.selectQuantity": "Select Quantity",
+  "cart.selectQuantity": "Quantity",
   "cart.SummaryHeader": "3. Summary",
   "cart.totalQuantity": "Total Quantity",
   "cart.price": "Price:",
@@ -1571,7 +1571,7 @@
   "cart.purchaseOrder.purchaseHazmatEligible": "You are not authorized to purchase this hazardous item.",
   "cart.packagesRequested": "Packages Requested:",
   "cart.requestedQuantity": "Requested Quantity:",
-  "cart.selectFirst": "Select Packages Requested first.",
+  "cart.selectFirst": "Select desired Quantity first.",
   "cart.holdRequestInfo": "2. Hold Request Info",
   "validation.required": "Required",
   "validation.dateInFuture": "Date must be in future",
