#34712 Updated Product status column in Super Admin and Company Admin Product Catalog.

--- a/localization/en.json
+++ b/localization/en.json
@@ -474,7 +474,9 @@
   "global.status": "Status",
   "global.unmapped": "unmapped",
   "global.unmapped.cptlz": "Unmapped",
-  "global.notPublished": "This echo product is not published and will not show on the Marketplace.",
+  "global.notPublished": "This Company Generic Product is not published and will not be shown on the Marketplace",
+  "global.productOk": "This Company Generic Product is published and will be shown on the Marketplace",
+  "global.productStatusIndicator": "Status indicator if Company Product will be shown on Marketplace",
   "global.country": "Country",
   "global.province": "Province",
   "global.stateProvince": "State/Province",
