added TDS tab to inventory detail sidebar

--- a/localization/en.json
+++ b/localization/en.json
@@ -1434,6 +1434,9 @@
   "addInventory.writeShortNotesHere": "Write short notes here...",
   "addInventory.writeExternalNotesHere": "Write external notes here...",
   "addInventory.writeInternalNotesHere": "Write internal notes here...",
+  "addInventory.tds": "TDS",
+  "addInventory.property": "Property",
+  "addInventory.specifications": "Specifications",
   "administration": "ADMINISTRATION",
   "administration.newCompanyName": "New Company Name",
   "administration.companies": "Companies",
