--- a/localization/en.json
+++ b/localization/en.json
@@ -652,6 +652,7 @@
   "global.irritation": "Irritation",
   "global.labelElements": "Label Elements",
   "global.leadTime": "Lead Time",
+  "global.days": "Days",
   "global.meltingPointRange": "Melting Point/Range",
   "global.mexicoGrade": "Mexico-Grade",
   "global.molecularFormula": "Molecular Formula",
