--- a/localization/en.json
+++ b/localization/en.json
@@ -412,6 +412,8 @@
   "global.product": "Product",
   "global.inciName": "INCI Name",
   "global.productName": "Product Name",
+  "global.productStatusIcon": "Product Status Icon",
+  "global.expirationStatusIcon": "Expiration Status Icon",
   "global.intProductName": "Internal Product Name",
   "global.intProductCode": "Internal Product Code",
   "global.pkgSize": "Packaging Size",
