added palletSaleOnly and adjust UX in sidebar

--- a/localization/en.json
+++ b/localization/en.json
@@ -804,11 +804,11 @@
   "global.unlink": "Unlink",
   "global.counter": "Counter",
   "global.returnReview": "Return to review",
-  "global.packageWeight": "Package Weight",
+  "global.packageWeight": "Gross weight per individual package",
   "global.packageWeightUnit": "Package Weight Unit",
   "global.packagesPerPallet": "Packages per Pallet",
   "global.palletMinPkgs": "Pallet Min Pkgs",
-  "global.palletMaxPkgs": "Pallet Max Pkgs",
+  "global.palletMaxPkgs": "Max Pkgs per Pallet",
   "global.palletWeight": "Pallet Weight",
   "global.palletLength": "Pallet Length",
   "global.palletWidth": "Pallet Width",
@@ -853,6 +853,10 @@
   "global.processed": "Processed",
   "global.paymentTerms": "Payment Terms",
   "global.change": "Change",
+  "global.packaging": "PACKAGING",
+  "global.pracing": "PRACING",
+  "global.document": "DOCUMENT",
+  "global.palletSaleOnly": "Pallet Sale Only",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
