#34644 Reworked Left menu (My Inventory, Marketplace, Wanted Board)

--- a/localization/en.json
+++ b/localization/en.json
@@ -167,6 +167,9 @@
   "navigation.manageGuests": "Manage Guests",
   "navigation.guests": "Guests",
   "navigation.chat": "Chat",
+  "navigation.wantedBoardListings": "Listings",
+  "navigation.wantedBoardBidsSent": "Bids Sent",
+  "navigation.wantedBoardBidsReceived": "Bids Received",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
   "dwolla.paymentPoweredBy": "Echo Global Chemical Exchange payment gateway is powered by:",
   "dwolla.confirmAcc": "Confirm Account Administrator Information",
