#34644 My Inventory - My Products & My Listings filter store/restore fixes. Added table handler in Inventory / My Products page.

--- a/localization/en.json
+++ b/localization/en.json
@@ -138,7 +138,8 @@
   "errors.noSelected.content": "Please check that all order items have selected at least one.",
   "navigation.inventory": "Inventory",
   "navigation.orders": "Orders",
-  "navigation.myInventory": "My Inventory",
+  "navigation.InventoryMyProducts": "My Products",
+  "navigation.InventoryMyListings": "My Listings",
   "navigation.addInventory": "Add Inventory",
   "navigation.guestCompanies": "Guest Companies",
   "navigation.marketplace": "Marketplace",
@@ -942,7 +943,7 @@
   "confirm.deleteUser": "Delete User",
   "confirm.deleteUser.content": "Do you really want to delete user?",
   "confirm.deleteItem": "Do you really want to delete '{item}'?",
-  "confirm.deleteProductCatalog": "Delete Product Catalog",
+  "confirm.deleteProduct": "Delete Product",
   "confirm.deleteBankAccount": "Delete Bank Account",
   "confirm.deleteBranch": "Delete Branch",
   "confirm.deleteWarehouse": "Delete Warehouse",
@@ -2055,7 +2056,7 @@
   "settings.tables.warehouses.search": "Search Pick-Up Location…",
   "settings.tables.products.buttonAdd": "Add Product",
   "settings.tables.products.buttonImport": "Import",
-  "settings.tables.products.search": "Search product catalog by name, number ...",
+  "settings.tables.products.search": "Search product by name, number ...",
   "settings.tables.products.unmappedOnly": "Unmapped only",
   "settings.tables.globalBroadcast.buttonAdd": "Add Global Price Book",
   "settings.tables.globalBroadcast.search": "Search global broadcast by name ...",
@@ -2402,6 +2403,8 @@
   "title.settings.users": "Users",
   "title.settings.warehouses": "Warehouses",
   "title.settings.locations": "Locations",
+  "title.inventory.myProducts": "My Products",
+  "title.inventory.myListings": "My Listings",
   "holds.intProductName": "Product Name",
   "holds.pkgsHeld": "Quantity",
   "holds.expirationTime": "Expires",
@@ -2459,9 +2462,9 @@
   "settings.warehouse.certificates.message.title": "This state/province already has certificate documents uploaded",
   "settings.warehouse.certificates.message.content": "If you want to update the documents, you will replace all existing certificates for warehouses in this state.",
   "settings.warehouse.certificateIcon.header": "Certificate is attached and so will be visible anywhere",
-  "title.wantedBoard": "Wanted Board",
-  "title.myRequestedItems": "My Requested Items",
-  "title.myOffers": "My Offers",
+  "title.wantedBoardListings": "Listings",
+  "title.wantedBoardBidsReceived": "Bids Received",
+  "title.wantedBoardBidsSent": "Bids Sent",
   "wantedBoard.product": "Product",
   "wantedBoard.productName": "Product Name",
   "wantedBoard.enterProductName": "Enter any Product Name",
@@ -2502,11 +2505,11 @@
   "wantedBoard.purchase": "Purchase",
   "wantedBoard.delete": "Delete",
   "wantedBoard.datePost": "Date Post",
-  "confirm.rejectRequestedItem.Header": "Reject Requested Item",
-  "confirm.rejectRequestedItem.Content": "Do you really want to reject requested item?",
+  "confirm.rejectReceivedBid.Header": "Reject Received Bid",
+  "confirm.rejectReceivedBid.Content": "Do you really want to reject received bid?",
   "confirm.deleteRequestedItem.Header": "Delete Requested Item",
   "confirm.deleteRequestedItem.Content": "Do you really want to delete requested item?",
-  "confirm.deleteItemOffer.Header": "Delete My Item Offer",
+  "confirm.deleteItemOffer.Header": "Delete Item Offer",
   "confirm.deleteItemOffer.Content": "Do you really want to remove item offer?",
   "wantedBoard.specificProducts": "SPECIFIC PRODUCT(S)",
   "wantedBoard.keyword": "Keyword",
