--- a/localization/en.json
+++ b/localization/en.json
@@ -1108,6 +1108,8 @@
   "myInventory.editPricing": "Edit Pricing",
   "myInventory.andAbove": "and above",
   "myInventory.productStatus.unmapped": "This Product Offer's Company Product is not mapped to Echo Product, so it will not be visible to other users at Marketplace.",
+  "myInventory.tooltipExpired": "Shows if Product offer is expired",
+  "myInventory.tooltipProductStatus": "Shows if Product offer's Generic Product is published and offer is visible on the Marketplace",
   "filter.warehouse": "Warehouse",
   "filter.incomplete": "Incomplete",
   "filter.chemicalProductName": "Chemical / Product Name",
@@ -2141,6 +2143,8 @@
   "marketplace.location": "Location",
   "marketplace.merchant": "Merchant",
   "marketplace.leadTime": "Lead Time (days)",
+  "marketplace.tooltipConformingIcon": "Shows if Product Offer has set conforming attribute",
+  "marketplace.tooltipExpired": "Shows if Product Offer is expired",
   "order.VENDOR": "VENDOR",
   "order.CUSTOMER": "CUSTOMER",
   "order.returnShippingSale": "ORDER RETURN SHIPPING",
