#34644 Marketplace tabs filter fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -138,11 +138,13 @@
   "errors.noSelected.content": "Please check that all order items have selected at least one.",
   "navigation.inventory": "Inventory",
   "navigation.orders": "Orders",
-  "navigation.InventoryMyProducts": "My Products",
-  "navigation.InventoryMyListings": "My Listings",
+  "navigation.inventoryMyProducts": "My Products",
+  "navigation.inventoryMyListings": "My Listings",
   "navigation.addInventory": "Add Inventory",
   "navigation.guestCompanies": "Guest Companies",
   "navigation.marketplace": "Marketplace",
+  "navigation.marketplaceListings": "Listings",
+  "navigation.marketplaceHolds": "Holds",
   "navigation.wantedBoard": "Wanted Board",
   "navigation.shoppingCart": "Shopping Cart",
   "navigation.salesOrders": "Sales Orders",
@@ -2421,7 +2423,8 @@
   "hold.reject": "Reject",
   "hold.cancel": "Cancel",
   "hold.approve": "Approve",
-  "hold.holdRequest": "Hold Requests",
+  "hold.listings": "Listings",
+  "hold.holds": "Holds",
   "hold.buy": "Buy",
   "tutorial.locations.title": "Add Branches",
   "tutorial.locations.content": "This will help you to know which users are at what locations",
