added velloci register, centrol person

--- a/localization/en.json
+++ b/localization/en.json
@@ -2066,6 +2066,7 @@
   "settings.tables.bankAccounts.registerDwolla": "Register Dwolla Account",
   "settings.tables.bankAccounts.uploadDoc": "Upload Documents",
   "settings.tables.bankAccounts.uploadOwnerDoc": "Upload Owner Documents",
+  "settings.tables.bankAccounts.registerVelloci": "Register Velloci",
   "settings.bankAccounts.uploadDoc.passport": "Passport",
   "settings.bankAccounts.uploadDoc.license": "License",
   "settings.bankAccounts.uploadDoc.idcard": "ID Card",
@@ -2616,5 +2617,25 @@
   "settings.placeholder.accontNumber": "Enter Account Number",
   "settings.placeholder.accontType": "Enter Account Type",
   "settings.placeholder.accontName": "Enter Account Name",
-  "settings.placeholder.routingName": "Enter Routing Name"
+  "settings.placeholder.routingName": "Enter Routing Name",
+  "velloci.setupIndicator.bussinesVerification": "Business Verification (KYB)",
+  "velloci.setupIndicator.enity": "Information needed to verify your business: Entity",
+  "velloci.setupIndicator.moreBeneficialOwners": "If more Beneficial Owners, Re-Enter Personal Identity Verification (KYC)",
+  "velloci.setupIndicator.personalIdentify": "Personal Identity Verification (KYC)",
+  "velloci.setupIndicator.individualOwners": "Information needed for Beneficial Owners: Individual",
+  "global.submitApplication": "Submit Application",
+  "settings.vellociRegister.controlPerson": "CONTROL PERSON",
+  "settings.vellociRegister.businessInfo": "BUSINESS INFO",
+  "settings.vellociRegister.companyFormationDocument": "COMPANY FORMATION DOCUMENT",
+  "settings.vellociRegister.ownerInformation": "OWNER INFORMATION",
+  "settings.vellociRegister.verifyPersonalInformation": "VERIFY PERSONAL INFORMATION",
+  "settings.vellociRegister.termsAndConditions": "TERMS AND CONDITIONS",
+  "settings.vellociRegistration.controlPerson.infoContent2": "If this does not apply to you, you will not be able to continue. Please get the person who will be the Control Person  of this account to continue.",
+  "settings.vellociRegistration.controlPerson.infoContent": "A control person is a single individual with significant responsibility to constrol manage or direct legal entity customer, including an executive ocer or senior manager (e.g. a Chief Executive Ocer, Chief Financial Ocer, Chief Operating Ocer, Managing Member, General Partner, President, Vice President or Treasurer); or any other individual who regulary performs similar functions.",
+  "settings.vellociRegistration.controlPerson.businessType": "Business Type",
+  "settings.vellociRegistration.controlPerson.kindBusiness": "What kind of business are you opening this account for?",
+  "settings.vellociRegistration.controlPerson.legalBusinessName": "Legal Business Name",
+  "settings.vellociRegistration.controlPerson.kindBusiness.placeholder": "Pick one",
+  "settings.vellociRegistration.controlPerson.legalBusinessName.placeholder": "Enter Business Name",
+  "settings.vellociRegistration.controlPerson.tax": "Tax Identification Number"
 }
