--- a/localization/en.json
+++ b/localization/en.json
@@ -2623,22 +2623,35 @@
   "velloci.setupIndicator.moreBeneficialOwners": "If more Beneficial Owners, Re-Enter Personal Identity Verification (KYC)",
   "velloci.setupIndicator.personalIdentify": "Personal Identity Verification (KYC)",
   "velloci.setupIndicator.individualOwners": "Information needed for Beneficial Owners: Individual",
-  "global.submitApplication": "Submit Application",
-  "settings.vellociRegister.controlPerson": "CONTROL PERSON",
-  "settings.vellociRegister.businessInfo": "BUSINESS INFO",
-  "settings.vellociRegister.companyFormationDocument": "COMPANY FORMATION DOCUMENT",
-  "settings.vellociRegister.ownerInformation": "OWNER INFORMATION",
-  "settings.vellociRegister.verifyPersonalInformation": "VERIFY PERSONAL INFORMATION",
-  "settings.vellociRegister.termsAndConditions": "TERMS AND CONDITIONS",
-  "settings.vellociRegistration.controlPerson.infoContent2": "If this does not apply to you, you will not be able to continue. Please get the person who will be the Control Person  of this account to continue.",
-  "settings.vellociRegistration.controlPerson.infoContent": "A control person is a single individual with significant responsibility to constrol manage or direct legal entity customer, including an executive ocer or senior manager (e.g. a Chief Executive Ocer, Chief Financial Ocer, Chief Operating Ocer, Managing Member, General Partner, President, Vice President or Treasurer); or any other individual who regulary performs similar functions.",
-  "settings.vellociRegistration.controlPerson.businessType": "Business Type",
-  "settings.vellociRegistration.controlPerson.kindBusiness": "What kind of business are you opening this account for?",
-  "settings.vellociRegistration.controlPerson.legalBusinessName": "Legal Business Name",
-  "settings.vellociRegistration.controlPerson.kindBusiness.placeholder": "Pick one",
-  "settings.vellociRegistration.controlPerson.legalBusinessName.placeholder": "Enter Business Name",
-  "settings.vellociRegistration.controlPerson.tax": "Tax Identification Number",
-  "settings.vellociRegistration.controlPerson.ein.placeholder": "Enter EIN",
-  "settings.vellociRegistration.controlPerson.ssn.placeholder": "Enter SSN",
-  "settings.vellociRegistration.controlPerson.establishedUs": "Established in the US?"
+  "velloci.submitApplication": "Submit Application",
+  "velloci.controlPerson": "CONTROL PERSON",
+  "velloci.businessInfo": "BUSINESS INFO",
+  "velloci.companyFormationDocument": "COMPANY FORMATION DOCUMENT",
+  "velloci.ownerInformation": "OWNER INFORMATION",
+  "velloci.verifyPersonalInformation": "VERIFY PERSONAL INFORMATION",
+  "velloci.termsAndConditions": "TERMS AND CONDITIONS",
+  "velloci.controlPerson.infoContent2": "If this does not apply to you, you will not be able to continue. Please get the person who will be the Control Person  of this account to continue.",
+  "velloci.controlPerson.infoContent": "A control person is a single individual with significant responsibility to constrol manage or direct legal entity customer, including an executive ocer or senior manager (e.g. a Chief Executive Ocer, Chief Financial Ocer, Chief Operating Ocer, Managing Member, General Partner, President, Vice President or Treasurer); or any other individual who regulary performs similar functions.",
+  "velloci.controlPerson.businessType": "Business Type",
+  "velloci.controlPerson.kindBusiness": "What kind of business are you opening this account for?",
+  "velloci.controlPerson.legalBusinessName": "Legal Business Name",
+  "velloci.controlPerson.kindBusiness.placeholder": "Pick one",
+  "velloci.controlPerson.legalBusinessName.placeholder": "Enter Business Name",
+  "velloci.controlPerson.tax": "Tax Identification Number",
+  "velloci.controlPerson.ein.placeholder": "Enter EIN",
+  "velloci.controlPerson.ssn.placeholder": "Enter SSN",
+  "velloci.controlPerson.establishedUs": "Established in the US?",
+  "velloci.businessInfo.subtitle": "Let us know how to reach you",
+  "velloci.ownerInformation.subtitle": "Information needed for Beneficial Owners 25% or greater",
+  "velloci.businessInfo.phoneNumber": "Personal Phone Number",
+  "velloci.businessInfo.phoneNumber.placeholder": "Enter phone number",
+  "velloci.businessInfo.emailAddress.placeholder": "Enter your email address",
+  "velloci.businessInfo.emailAddress": "Email Address",
+  "velloci.businessInfo.url.placeholder": "Enter your business URL",
+  "velloci.businessInfo.url": "URL",
+  "velloci.businessInfo.legalAddress": "Your Legal Address",
+  "velloci.businessInfo.dbaName": "DBA Name  (if applicable)",
+  "velloci.businessInfo.dbaName.placeholder": "Business Name",
+  "velloci.businessInfo.meanTitle": "What does this mean?",
+  "velloci.businessInfo.meanContent": "Unless your business has a registered trade or fictitious business name with a government body, you don't need to worry about this step"
 }
