--- a/localization/en.json
+++ b/localization/en.json
@@ -2659,5 +2659,18 @@
   "velloci.formationDocument.optionalTitle": "What files are optional",
   "velloci.formationDocument.optionalContent": "Articles of Incorporation, Certificate of Formation, Articles of Organization",
   "velloci.formationDocument.uploadDocuments": "Upload PNG, JPEG or PDF formats. ",
-  "velloci.formationDocument.availableDocuments": "Add as many documents as you have available."
+  "velloci.formationDocument.availableDocuments": "Add as many documents as you have available.",
+  "velloci.ownerInformation.infoContent": "This information is required under the Bank Secrecy Act and is intended to assist the government and law enforcement int the ongoing fight against money laundering and the financing of terrorism.",
+  "velloci.ownerInformation.requiredTitle": "Required information under the Bank Secrecy Act",
+  "velloci.ownerInformation.beneficialOwner": "Are you the beneficial owner?",
+  "velloci.ownerInformation.otherBeneficialOwners": "OTHER BENEFICIAL OWNERS",
+  "velloci.ownerInformation.controlPerson": "CONTROL PERSON",
+  "velloci.ownerInformation.noOne25Content": "In that case, there may not be a beneficial owner listed.",
+  "velloci.ownerInformation.noOne25Title": "What if no one owns greater than 25%?",
+  "velloci.ownerInformation.otherBeneficialOwner": "Are there any other beneficial owner?",
+  "velloci.ownerInformation.completeNow": "COMPLETE NOW OR EMAIL BENEFICIAL OWNERS",
+  "velloci.ownerInformation.wouldComplete": "Would you like to complete this form for the remaining beneficial owners or email them a link to complete?",
+  "velloci.ownerInformation.needInfo": "Here is the info you'll need:",
+  "velloci.ownerInformation.obtainInfoTitle": "Can't Obtain this Information",
+  "velloci.ownerInformation.obtainInfoContent": "No problem. Please select email and we will send them a link to complete the process."
 }
