#34653 Updated Inventory filters design and styles.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1178,8 +1178,8 @@
   "filter.startTypingToSearch": "Start typing to search...",
   "filter.noResultsFound": "No results found.",
   "filter.To": "To",
-  "filter.Minimum": "Minimum",
-  "filter.Maximum": "Maximum",
+  "filter.min": "Min",
+  "filter.max": "Max",
   "filter.chemicalType": "Chemical Type",
   "filter.order": "Order",
   "filter.orderId": "Order ID",
