added new company product fields to import mapper

--- a/localization/en.json
+++ b/localization/en.json
@@ -855,11 +855,13 @@
   "global.packaging": "PACKAGING",
   "global.pracing": "PRACING",
   "global.document": "DOCUMENT",
-  "global.palletSaleOnly": "Pallet Sale Only",
   "global.specifications": "Specifications",
   "global.property": "Property",
   "global.palletPkgMin": "Pallet Pkg Min",
   "global.palletPkgMax": "Pallet Pkg Max",
+  "global.companyGenericProductName": "Company Generic Product Name",
+  "global.companyGenericProductCode": "Company Generic Product Code",
+  "global.companyGenericProductNameOrCode": "Company Generic Product Name Or Code",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -891,7 +893,7 @@
   "import.companies.primaryBranchDeliveryAddressAddressCountry": "Primary Branch Country",
   "import.companies.primaryBranchDeliveryAddressAddressStreetAddress": "Primary Branch Street",
   "import.companies.primaryBranchDeliveryAddressAddressZip": "Primary Branch Zip",
-  "import.companies.primaryBranchDeliveryAddressContactEmail": "Primary Branch Contant Email",
+  "import.companies.primaryBranchDeliveryAddressContactEmail": "Primary Branch Contact Email",
   "import.companies.primaryBranchDeliveryAddressContactName": "Primary Branch Contact Name",
   "import.companies.primaryBranchDeliveryAddressContactPhone": "Primary Branch Contact Phone",
   "import.companies.primaryBranchIsWarehouse": "Primary Branch Is Warehouse",
