Task #34833 - fixes for Dashboard Daily Statistics

--- a/localization/en.json
+++ b/localization/en.json
@@ -2611,6 +2611,29 @@
   "dasboard.topBuyers": "TOP 10 BUYERS",
   "dasboard.total": "Total",
   "dasboard.average": " average",
+  "dashboard.dailyStats": "DAILY STATS",
+  "dashboard.daily.stats.title": "Daily Statistics",
+  "dashboard.clientCompaniesCount": "# of Client Companies",
+  "dashboard.companiesCount": "# of Companies",
+  "dashboard.companyGenericProductsCount": "# of Company Generic Products",
+  "dashboard.productOffersCount": "# of Product Offers",
+  "dashboard.usersCount": "# of Users",
+  "dashboard.sales": "Sales",
+  "dashboard.totalPOValue": "Total Product Offer Value",
+  "dashboard.totalValueBroadcastedPO": "Total Value of Broadcasted Product Offers",
+  "dashboard.stats.type": "Stats Type",
+  "dashboard.dateFilter.today": "Today",
+  "dashboard.dateFilter.thisWeek": "This week",
+  "dashboard.dateFilter.lastWeek": "Last week",
+  "dashboard.dateFilter.thisMonth": "This month",
+  "dashboard.dateFilter.lastMonth": "Last month",
+  "dashboard.dateFilter.thisYear": "This year",
+  "dashboard.dateFilter.lastYear": "Last year",
+  "dashboard.dateFilter.allTime": "All the time",
+  "dashboard.error.invalidDate": "Invalid Date",
+  "dashboard.error.invalidDateRange": "Invalid Date Range",
   "global.scrollDown": "Scroll down for load more items",
-  "cart.changeAddress": "CHANGE ADDRESS"
+  "cart.changeAddress": "CHANGE ADDRESS",
+  "global.dateFrom": "Date From",
+  "global.dateTo": "Date To"
 }
