--- a/localization/en.json
+++ b/localization/en.json
@@ -316,9 +316,9 @@
   "global.packagingExceptions": "Packaging Exceptions",
   "global.packagingNonBulk": "Packaging Non Bulk",
   "global.packagingBulk": "Packaging Bulk",
-  "global.packagingLength": "Packaging Length",
-  "global.packagingHeight": "Packaging Height",
-  "global.packagingWidth": "Packaging Width",
+  "global.packageLength": "Package Length",
+  "global.packageHeight": "Package Height",
+  "global.packageWidth": "Package Width",
   "global.quantityLimitationsPassengerAircraftRail": "Quantity Limitations Passenger Aircraft/Rail",
   "global.quantityLimitationsCargoAircraftOnly": "Quantity Limitations Cargo Aircraft Only",
   "global.vesselStowageLocation": "Vessel Stowage Location",
@@ -803,8 +803,8 @@
   "global.unlink": "Unlink",
   "global.counter": "Counter",
   "global.returnReview": "Return to review",
-  "global.packageWeight": "Gross weight per individual package",
-  "global.packageWeightUnit": "Package Weight Unit",
+  "global.packageWeight": "Gross Weight per Package",
+  "global.weightUnit": "Weight Unit",
   "global.packagesPerPallet": "Packages per Pallet",
   "global.palletMinPkgs": "Pallet Min Pkgs",
   "global.palletMaxPkgs": "Max Pkgs per Pallet",
@@ -860,6 +860,8 @@
   "global.property": "Property",
   "global.palletPkgMin": "Pallet Pkg Min",
   "global.palletPkgMax": "Pallet Pkg Max",
+  "global.packagingDimensions": "Packaging Dimensions",
+  "global.freight": "Freight",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
