adjust velloci register

--- a/localization/en.json
+++ b/localization/en.json
@@ -38,6 +38,7 @@
   "auth.sessionTimeout.buttonKeepWorking": "Keep Working",
   "admin.editAlternativeNames": "Edit Alternative Names",
   "admin.registerDwollaAccount": "Register Dwolla Account",
+  "admin.registerVellociAccount": "Register Velloci Account",
   "admin.resendWelcomeEmail": "Resend Welcome Email",
   "admin.takeOver": "Take-over as Company Admin",
   "broadcast.saveTemplate": "Save as Template",
@@ -364,6 +365,7 @@
   "global.back": "Back",
   "global.hazardClasses": "Hazard Classes",
   "global.dwollaAccount": "Dwolla Account",
+  "global.vellociAccount": "Velloci Account",
   "global.logisticAccounts": "Logistics Accounts",
   "global.reviewRequested": "Review Requested",
   "global.companyName": "Company Name",
@@ -2069,7 +2071,7 @@
   "settings.tables.bankAccounts.registerDwolla": "Register Dwolla Account",
   "settings.tables.bankAccounts.uploadDoc": "Upload Documents",
   "settings.tables.bankAccounts.uploadOwnerDoc": "Upload Owner Documents",
-  "settings.tables.bankAccounts.registerVelloci": "Register Velloci",
+  "settings.tables.bankAccounts.registerVelloci": "Register Velloci Account",
   "settings.bankAccounts.uploadDoc.passport": "Passport",
   "settings.bankAccounts.uploadDoc.license": "License",
   "settings.bankAccounts.uploadDoc.idcard": "ID Card",
