--- a/localization/en.json
+++ b/localization/en.json
@@ -865,6 +865,7 @@
   "global.companyGenericProductName": "Company Generic Product Name",
   "global.companyGenericProductCode": "Company Generic Product Code",
   "global.companyGenericProductNameOrCode": "Company Generic Product Name Or Code",
+  "global.25percentage": "25%",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -2666,7 +2667,7 @@
   "velloci.controlPerson.ssn.placeholder": "Enter SSN",
   "velloci.controlPerson.establishedUs": "Established in the US?",
   "velloci.businessInfo.subtitle": "Let us know how to reach you",
-  "velloci.ownerInformation.subtitle": "Information needed for Beneficial Owners 25% or greater",
+  "velloci.ownerInformation.subtitle": "Information needed for Beneficial Owners {percentage} or greater",
   "velloci.businessInfo.phoneNumber": "Personal Phone Number",
   "velloci.businessInfo.phoneNumber.placeholder": "Enter phone number",
   "velloci.businessInfo.emailAddress.placeholder": "Enter your email address",
