--- a/localization/en.json
+++ b/localization/en.json
@@ -14,7 +14,7 @@
   "alerts.menu.wanted_board_requests": "Wanted Board Requests",
   "alerts.menu.wanted_board_matches": "Wanted Board Matches",
   "alerts.menu.users": "Users",
-  "alerts.searchNotification": "Search Notification...",
+  "alerts.searchNotification": "Search Notification",
   "alerts.button.all": "All",
   "alerts.button.read": "Read",
   "alerts.button.unread": "Unread",
@@ -78,7 +78,7 @@
   "admin.associations": "Associations",
   "admin.MarketSegment": "Document Segment",
   "admin.addMarketSegment": "Add Market Segment",
-  "admin.searchCasProduct": "Search CAS product by name or number ...",
+  "admin.searchCasProduct": "Search CAS product by name or number ",
   "admin.searchCompany": "Search company by name",
   "admin.searchUnitOfMeasure": "Search unit of measure by name or measure type",
   "admin.searchUnitOfPackaging": "Search packaging types by name or measure type",
@@ -99,7 +99,7 @@
   "admin.sds.versionNumber": "SDS Version Number",
   "admin.sds.revisionDate": "SDS Revision Date",
   "admin.user": "User",
-  "admin.searchUser": "Search user...",
+  "admin.searchUser": "Search user",
   "admin.createWarehouseWith": "Create Warehouse with same parameters",
   "admin.deleteCompanyGenericProduct": "Delete Company Generic Product",
   "admin.addCompany": "Add Company",
@@ -262,7 +262,7 @@
   "casProduct.internationalIECSC": "IECSC",
   "casProduct.internationalKECL": "KECL",
   "global.placeholder.taxId": "Enter Tax ID",
-  "global.placeholder.deliveryNotes": "Write delivery notes here...",
+  "global.placeholder.deliveryNotes": "Write delivery notes here",
   "global.from": "From",
   "global.company": "Company",
   "global.clientCompany": "Guest Company",
@@ -1022,7 +1022,7 @@
   "login.username": "Username",
   "login.password": "Password",
   "login.login": "LOG IN",
-  "login.logging": "Logging...",
+  "login.logging": "Logging",
   "login.incorrect": "Incorrect username or password",
   "login.welcomeBack": "Welcome back!",
   "payments.notAvailableAddOne": "You have no Bank Account specified. To continue, please {addBankAccount} first.",
@@ -1039,16 +1039,16 @@
   "manageGuests.companyEdit.tab.users": "Users",
   "manageGuests.companyEdit.tab.documentManager": "Document Manager",
   "manageGuests.companyEdit.tab.quote": "Quote",
-  "manageGuests.searchGuest": "Search guest...",
+  "manageGuests.searchGuest": "Search guest",
   "manageGuests.addCompany": "Add Company",
-  "manageGuests.searchClient": "Search Client...",
+  "manageGuests.searchClient": "Search Client",
   "manageGuests.addClient": "Add Client",
-  "manageGuests.searchDocuments": "Search Documents...",
+  "manageGuests.searchDocuments": "Search Documents",
   "manageGuests.chooseDocumentType": "Choose Document Type",
   "manageGuests.allDocumentTypes": "All Document Types",
   "manageGuests.downloadAll": "Download All",
   "manageGuests.addDocument": "Add Document",
-  "manageGuests.searchQuote": "Search...",
+  "manageGuests.searchQuote": "Search",
   "manageGuests.myDocuments": "My Documents",
   "manageGuests.sharedWithMe": "Shared With Me",
   "nav.Logout": "Logout",
@@ -1107,8 +1107,8 @@
   "myInventory.offerExpiration": "Offer Exp. Date",
   "myInventory.groupId": "Group ID",
   "myInventory.lotNumber": "Lot Number",
-  "myInventory.searchByProductName": "Search by product name...",
-  "myInventory.searchByProductOrTagName": "Search by product or tag name...",
+  "myInventory.searchByProductName": "Search by product name",
+  "myInventory.searchByProductOrTagName": "Search by product or tag name",
   "myInventory.editPricing": "Edit Pricing",
   "myInventory.andAbove": "and above",
   "myInventory.productStatus.unmapped": "This Product Offer's Company Product is not mapped to Echo Product, so it will not be visible to other users at Marketplace.",
@@ -1171,7 +1171,7 @@
   "filter.From": "From",
   "filter.dateFrom": "From",
   "filter.dateTo": "To",
-  "filter.startTypingToSearch": "Start typing to search...",
+  "filter.startTypingToSearch": "Start typing to search",
   "filter.noResultsFound": "No results found.",
   "filter.To": "To",
   "filter.Minimum": "Minimum",
@@ -1217,7 +1217,7 @@
   "filter.editNotifications": "Edit Notifications",
   "filter.activateFilter": "Activate Filter",
   "filter.deleteFilter": "Delete Filter",
-  "filterTags.andMore": "And {count} more...",
+  "filterTags.andMore": "And {count} more",
   "filter.useMyEmail": "Your Email Address",
   "filter.useMyPhone": "Your Phone Number",
   "filter.keywordSearch": "Keyword Search",
@@ -1447,9 +1447,9 @@
   "addInventory.selectForm": "Select Form",
   "addInventory.selectWarehouse": "Select Warehouse",
   "addInventory.selectCountry": "Select Country",
-  "addInventory.writeShortNotesHere": "Write short notes here...",
-  "addInventory.writeExternalNotesHere": "Write external notes here...",
-  "addInventory.writeInternalNotesHere": "Write internal notes here...",
+  "addInventory.writeShortNotesHere": "Write short notes here",
+  "addInventory.writeExternalNotesHere": "Write external notes here",
+  "addInventory.writeInternalNotesHere": "Write internal notes here",
   "addInventory.tds": "TDS",
   "addInventory.property": "Property",
   "addInventory.specifications": "Specifications",
@@ -1893,10 +1893,10 @@
   "operations.tables.tags.buttonAdd": "Add Tag",
   "operations.tables.shippingQuotes.search": "Search shipping quote by TBD",
   "operations.tables.tags.search": "Search tags",
-  "operations.tables.companyProductCatalog.search": "Search product catalog by name, number ...",
+  "operations.tables.companyProductCatalog.search": "Search product catalog by name, number ",
   "operations.tables.companyProductCatalog.SearchCompanyText": "Search product catalog by company",
   "operations.tables.companyProductCatalog.MappedText": "Select mapped/unmapped only",
-  "operations.tables.companyInventory.search": "Search product inventory by name, number ...",
+  "operations.tables.companyInventory.search": "Search product inventory by name, number ",
   "operations.tables.orders.search": "Search orders by company",
   "operations.tables.companyGenericProduct.search": "Search Company Generic Product by name",
   "operations.addShippingQuote": "Add Shipping Quote",
@@ -1934,7 +1934,7 @@
   "confirm.delete.operations.tag.content": "Do you really want to delete tag?",
   "orders.detail": "Detail",
   "orders.accountingDocuments": "Accounting Documents",
-  "orders.searchByOrderID": "Search By Order ID...",
+  "orders.searchByOrderID": "Search By Order ID",
   "orders.orderDate": "Order Date",
   "orders.statusOptions.all": "Show All Status",
   "orders.statusOptions.draft": "Show Draft Status",
@@ -2051,23 +2051,23 @@
   "settings.editLogistics": "Edit Logistics",
   "settings.addLogistics": "Add Logistics",
   "settings.tables.users.buttonAdd": "Add User",
-  "settings.tables.users.search": "Search user by name, title or branch ...",
+  "settings.tables.users.search": "Search user by name, title or branch ",
   "settings.tables.guestCompanies.buttonAdd": "Add Guest Company",
   "settings.tables.guestCompanies.search": "Search Guest Companies",
   "settings.tables.branches.buttonAdd": "Add Branch",
-  "settings.tables.branches.search": "Search branch by name, address or contact ...",
+  "settings.tables.branches.search": "Search branch by name, address or contact ",
   "settings.tables.warehouses.buttonAdd": "Add Pick-Up Location",
   "settings.tables.warehouses.search": "Search Pick-Up Location…",
   "settings.tables.products.buttonAdd": "Add Product",
   "settings.tables.products.buttonImport": "Import",
-  "settings.tables.products.search": "Search product catalog by name, number ...",
+  "settings.tables.products.search": "Search product catalog by name, number ",
   "settings.tables.products.unmappedOnly": "Unmapped only",
   "settings.tables.globalBroadcast.buttonAdd": "Add Global Price Book",
-  "settings.tables.globalBroadcast.search": "Search global broadcast by name ...",
+  "settings.tables.globalBroadcast.search": "Search global broadcast by name ",
   "settings.tables.creditCards.buttonAdd": "Add Credit card",
-  "settings.tables.creditCards.search": "Search credit card ...",
+  "settings.tables.creditCards.search": "Search credit card ",
   "settings.tables.bankAccounts.buttonAdd": "Add Account",
-  "settings.tables.bankAccounts.search": "Search bank account ...",
+  "settings.tables.bankAccounts.search": "Search bank account ",
   "settings.tables.bankAccounts.registerDwolla": "Register Dwolla Account",
   "settings.tables.bankAccounts.uploadDoc": "Upload Documents",
   "settings.tables.bankAccounts.uploadOwnerDoc": "Upload Owner Documents",
@@ -2078,14 +2078,14 @@
   "settings.tables.deliveryAddresses.buttonAdd": "Add Delivery Location",
   "settings.tables.deliveryAddresses.search": "Search Delivery Location…",
   "settings.tables.logistics.buttonAdd": "Add Logistics",
-  "settings.tables.logistics.search": "Search logistics ...",
+  "settings.tables.logistics.search": "Search logistics ",
   "settings.tables.documents.buttonAdd": "Add Document",
   "settings.branches.enterBranch": "Enter Branch Name",
   "settings.warehouses.enterWarehouseName": "Enter Pick-Up Location Name",
   "settings.warehouses.enterContactName": "Enter Contact Name",
   "settings.warehouses.enterEmailAddress": "Enter Email Address",
   "settings.warehouses.enterTaxId": "Enter Tax ID",
-  "settings.warehouses.writeDeliveryNotesHere": "Write Delivery Notes Here...",
+  "settings.warehouses.writeDeliveryNotesHere": "Write Delivery Notes Here",
   "settings.locations.menu.deliveryLocations": "Delivery Locations",
   "settings.locations.menu.pickUpLocations": "Pick-Up Locations",
   "settings.locations.menu.branches": "Branches",
@@ -2094,7 +2094,7 @@
   "related.documents.documentType": "Document Type",
   "related.documents.addedNewDocument": "New document has been added",
   "related.documents.unlinkDocument": "Document has been unlinked",
-  "settings.tables.documents.search": "Search documents ...",
+  "settings.tables.documents.search": "Search documents ",
   "settings.tables.documents.dropdown": "Choose document type",
   "settings.tables.documents.dropdown.all.document.types": "All document types",
   "settings.previous": "< Previous",
@@ -2502,7 +2502,7 @@
   "wantedBoard.neededBy": "Needed By",
   "wantedBoard.condition": "Condition",
   "wantedBoard.status": "Status",
-  "wantedBoard.searchByProductName": "Search by product name...",
+  "wantedBoard.searchByProductName": "Search by product name",
   "wantedBoard.requestProduct": "Request Product",
   "wantedBoard.chemical": "Chemical",
   "wantedBoard.submitOffer": "Submit Offer",
@@ -2570,7 +2570,7 @@
   "companies.title": "Companies",
   "products.productCatalog.search": "Search by Product Name or Code",
   "products.productCatalog.buttonAdd": "Add Company Generic Product",
-  "products.casProducts.search": "Search CAS product by name or number ...",
+  "products.casProducts.search": "Search CAS product by name or number ",
   "products.casProducts.buttonAdd": "Add CAS Product",
   "documentTypes.title": "Document Types",
   "marketSegments.title": "Market Segments",
