removed ... horizontal elipsis

--- a/localization/en.json
+++ b/localization/en.json
@@ -2057,7 +2057,7 @@
   "settings.tables.branches.buttonAdd": "Add Branch",
   "settings.tables.branches.search": "Search branch by name, address or contact ",
   "settings.tables.warehouses.buttonAdd": "Add Pick-Up Location",
-  "settings.tables.warehouses.search": "Search Pick-Up Location…",
+  "settings.tables.warehouses.search": "Search Pick-Up Location",
   "settings.tables.products.buttonAdd": "Add Product",
   "settings.tables.products.buttonImport": "Import",
   "settings.tables.products.search": "Search product catalog by name, number ",
@@ -2076,7 +2076,7 @@
   "settings.bankAccounts.uploadDoc.idcard": "ID Card",
   "settings.bankAccounts.uploadDoc.other": "Other",
   "settings.tables.deliveryAddresses.buttonAdd": "Add Delivery Location",
-  "settings.tables.deliveryAddresses.search": "Search Delivery Location…",
+  "settings.tables.deliveryAddresses.search": "Search Delivery Location",
   "settings.tables.logistics.buttonAdd": "Add Logistics",
   "settings.tables.logistics.search": "Search logistics ",
   "settings.tables.documents.buttonAdd": "Add Document",
