fixed phone validation

--- a/localization/en.json
+++ b/localization/en.json
@@ -466,6 +466,7 @@
   "global.phoneCCC": "+CCC",
   "global.phone": "Phone",
   "global.phoneNumberRequired": "Phone number required",
+  "global.phoneNumberIsInvalid": "Phone number is invalid",
   "global.phoneCountryCodeRequired": "Phone country code required",
   "global.homeBranch": "Home Branch",
   "global.additionalBranches": "Additional Branches",
