velloci register, logic for velloci in bank account

--- a/localization/en.json
+++ b/localization/en.json
@@ -2738,5 +2738,40 @@
   "velloci.termsAndConditions.depositAccountAgreement.link": "Deposit Account Agreement ",
   "velloci.termsAndConditions.serviceTerms.link": "Service terms ",
   "global.dateFrom": "Date From",
-  "global.dateTo": "Date To"
+  "global.dateTo": "Date To",
+  "settings.vellociAccBalance": "Velloci Balance: ",
+  "velloci.registrationStatus": "Velloci Registration Status",
+  "velloci.info": "Info",
+  "velloci.info.none": "You can start Velloci account registration now.",
+  "velloci.info.deactivated": "You can start Velloci account registration now.",
+  "velloci.info.retry": "Please retry Velloci registration with all fields filled-in (not just required ones).",
+  "velloci.info.document": "Please verify you business by attaching following documents:",
+  "velloci.info.suspended": "Please contact support.",
+  "velloci.registrationStatus.none": "none",
+  "velloci.registrationStatus.retry": "retry",
+  "velloci.registrationStatus.document": "document",
+  "velloci.registrationStatus.suspended": "suspended",
+  "velloci.registrationStatus.deactivated": "deactivated",
+  "velloci.document.verifywithdocument": "to identify Controlling person",
+  "velloci.document.verifybusinesswithdocument": "to identify Business",
+  "velloci.document.verifycontrollerandbusinesswithdocument": "to identify both Controlling person and Business",
+  "velloci.document.explanatory.header1": "Controllers",
+  "velloci.document.explanatory.text1": "A color scanned photo of the Controller’s identifying document can be specified as Document Type: passport, license (state issued driver’s license), or idCard (other U.S. government-issued photo id card).",
+  "velloci.document.owner.header1": "Owner Documentation",
+  "velloci.document.owner.text1": "A scanned photo of the Owner's identifying document can be one of the following:",
+  "velloci.document.owner.text2": "* U.S. Resident: passport or state issued driver's license",
+  "velloci.document.owner.text3": "* Non-U.S. Resident: passport",
+  "velloci.document.explanatory.header2": "Businesses",
+  "velloci.document.explanatory.text21": "Documents that are used to help identify a business are specified as Document Type other. Business Identifying documents we recommend uploading can include the following:",
+  "velloci.document.explanatory.BoldLi11": "Partnership, General Partnership: ",
+  "velloci.document.explanatory.TextLi11": "EIN Letter (IRS-issued SS4 confirmation letter).",
+  "velloci.document.explanatory.BoldLi12": "Limited Liability Corporation (LLC), Corporation: ",
+  "velloci.document.explanatory.TextLi12": "EIN Letter (IRS-issued SS4 confirmation letter).",
+  "velloci.document.explanatory.BoldLi13": "Sole Proprietorship: ",
+  "velloci.document.explanatory.TextLi13": "One or more of the following, as applicable to your sole proprietorship: Fictitious Business Name Statement; Certificate of Assumed Name; Business License; Sales/Use Tax License; Registration of Trade Name; EIN documentation (IRS-issued SS4 confirmation letter); Color copy of a valid government-issued photo ID (e.g., a driver’s license, passport, or state ID card).",
+  "velloci.document.explanatory.text22": "Other business documents that are applicable includes any US government entity (federal, state, local) issued business formation or licensing exhibiting the name of the business enrolling with velloci, or; Any business formation documents exhibiting the name of the business entity in addition to being filed and stamped by a US government entity. Examples include:",
+  "velloci.document.explanatory.li21": "Filed and stamped Articles of Organization or Incorporation",
+  "velloci.document.explanatory.li22": "Sales/Use Tax License",
+  "velloci.document.explanatory.li23": "Business License",
+  "velloci.document.explanatory.li24": "Certificate of Good Standing"
 }
