--- a/localization/en.json
+++ b/localization/en.json
@@ -2677,7 +2677,7 @@
   "velloci.verifyPersonalInformation": "VERIFY PERSONAL INFORMATION",
   "velloci.termsAndConditions": "TERMS AND CONDITIONS",
   "velloci.controlPerson.infoContent2": "If this does not apply to you, you will not be able to continue. Please get the person who will be the Control Person  of this account to continue.",
-  "velloci.controlPerson.infoContent": "A control person is a single individual with significant responsibility to constrol manage or direct legal entity customer, including an executive ocer or senior manager (e.g. a Chief Executive Ocer, Chief Financial Ocer, Chief Operating Ocer, Managing Member, General Partner, President, Vice President or Treasurer); or any other individual who regulary performs similar functions.",
+  "velloci.controlPerson.infoContent": "A control person is a single individual with significant responsibility to control, manage or direct legal entity customer, including an executive ocer or senior manager (e.g. a Chief Executive Ocer, Chief Financial Ocer, Chief Operating Ocer, Managing Member, General Partner, President, Vice President or Treasurer); or any other individual who regulary performs similar functions.",
   "velloci.controlPerson.businessType": "Business Type",
   "velloci.controlPerson.kindBusiness": "What kind of business are you opening this account for?",
   "velloci.controlPerson.legalBusinessName": "Legal Business Name",
@@ -2686,6 +2686,8 @@
   "velloci.controlPerson.tax": "Tax Identification Number",
   "velloci.controlPerson.ein.placeholder": "Enter EIN",
   "velloci.controlPerson.ssn.placeholder": "Enter SSN",
+  "velloci.controlPerson.tinNumber": "Tax Identification Number",
+  "velloci.controlPerson.tinNumber.placeholder": "Enter Tax Identification Number",
   "velloci.controlPerson.establishedUs": "Established in the US?",
   "velloci.businessInfo.subtitle": "Let us know how to reach you",
   "velloci.ownerInformation.subtitle": "Information needed for Beneficial Owners {percentage} or greater",
